Crash when setting content-{width,height} on AdwAlertDialog
The following dialog crashes when presented:
<object class="AdwAlertDialog" id="dialog1">
<property name="content_width">600</property>
<property name="content_height">400</property>
<property name="title" translatable="yes">Drive Settings</property>
<property name="extra-child">
<object class="GtkBox" id="dialog-vbox1">
<child>
<object class="GtkNotebook" id="notebook1">
...
removing the content-XYZ properties fixes the crash.
bt:
0x00007ffff7a3c504 in measure_child () from /usr/lib/x86_64-linux-gnu/libadwaita-1.so.0
(gdb) bt
#0 0x00007ffff7a3c504 in measure_child () at /usr/lib/x86_64-linux-gnu/libadwaita-1.so.0
#1 0x00007ffff6f58a29 in gtk_custom_layout_measure () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#2 0x00007ffff6fce440 in gtk_layout_manager_measure () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#3 0x00007ffff7058d3c in gtk_widget_query_size_for_orientation () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#4 0x00007ffff7a5858a in set_content_size () at /usr/lib/x86_64-linux-gnu/libadwaita-1.so.0
#5 0x00007ffff7d6079a in object_set_property () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#6 0x00007ffff7d635c7 in g_object_setv () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#7 0x00007ffff6f2cf81 in _gtk_builder_construct () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#8 0x00007ffff6f2efc5 in builder_construct () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#9 0x00007ffff6f31393 in start_element () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#10 0x00007ffff7c56efc in emit_start_element () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007ffff7c582c9 in g_markup_parse_context_parse () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007ffff6f326a6 in _gtk_builder_parser_parse_buffer () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#13 0x00007ffff6f29a39 in gtk_builder_add_from_resource () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#14 0x000055555556c64f in gdu_application_new_widget
(application=<optimized out>, ui_file=ui_file@entry=0x555555591cb6 "disk-settings-dialog.ui", name=name@entry=0x5555555911e8 "dialog1", out_builder=out_builder@entry=0x555556b76810) at ../../../../../gnome-disk-utility/src/disks/gdu-application.c:462
#15 0x0000555555585b65 in gdu_disk_settings_dialog_show (window=0x5555556f6410, object=<optimized out>, client=<optimized out>)
at ../../../../../gnome-disk-utility/src/disks/gdudisksettingsdialog.c:464
#16 0x00007ffff7174257 in gtk_menu_tracker_item_activated () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#17 0x00007ffff7170498 in gtk_popover_item_activate () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#18 0x00007ffff7d5985a in g_closure_invoke () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#19 0x00007ffff7d6f1b3 in signal_emit_unlocked_R.isra.0 () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#20 0x00007ffff7d70c21 in signal_emit_valist_unlocked () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#21 0x00007ffff7d76bf1 in g_signal_emit_valist () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#22 0x00007ffff7d76cb3 in g_signal_emit () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#27 0x00007ffff7d76cb3 in <emit signal '???' on instance ???> () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#23 0x00007ffff6ee593c in _gtk_marshal_VOID__INT_DOUBLE_DOUBLEv () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#24 0x00007ffff7d59a72 in _g_closure_invoke_va () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
--Type <RET> for more, q to quit, c to continue without paging--c
#25 0x00007ffff7d70d70 in signal_emit_valist_unlocked () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#26 0x00007ffff7d76bf1 in g_signal_emit_valist () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#28 0x00007ffff6fa4213 in gtk_gesture_click_end () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#33 0x00007ffff7d76cb3 in <emit signal '???' on instance ???> () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#29 0x00007ffff7d5ce65 in g_cclosure_marshal_VOID__BOXEDv () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#30 0x00007ffff7d59a72 in _g_closure_invoke_va () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#31 0x00007ffff7d70d70 in signal_emit_valist_unlocked () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#32 0x00007ffff7d76bf1 in g_signal_emit_valist () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#34 0x00007ffff6fa0f70 in _gtk_gesture_check_recognized () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#35 0x00007ffff6fa27db in gtk_gesture_handle_event () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#36 0x00007ffff6fa5a0d in gtk_gesture_single_handle_event () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#37 0x00007ffff6f6effc in gtk_event_controller_handle_event () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#38 0x00007ffff70d5e68 in gtk_widget_run_controllers () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#39 0x00007ffff70ddc98 in _gtk_widget_captured_event () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#40 0x00007ffff6fe7b22 in gtk_propagate_event_internal () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#41 0x00007ffff6fe8143 in gtk_main_do_event () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#42 0x00007ffff7012cc0 in surface_event () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#48 0x00007ffff7d76cb3 in <emit signal '???' on instance ???> () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#43 0x00007ffff727b24e in _gdk_marshal_BOOLEAN__POINTERv () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#44 0x00007ffff731478a in gdk_surface_event_marshallerv () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#45 0x00007ffff7d59a72 in _g_closure_invoke_va () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#46 0x00007ffff7d6ffd3 in signal_emit_valist_unlocked () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#47 0x00007ffff7d76bf1 in g_signal_emit_valist () at /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
#49 0x00007ffff73183a5 in gdk_surface_handle_event () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#50 0x00007ffff7292626 in gdk_event_source_dispatch () at /usr/lib/x86_64-linux-gnu/libgtk-4.so.1
#51 0x00007ffff7c50ae7 in g_main_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#52 0x00007ffff7c52db7 in g_main_context_iterate_unlocked.isra () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#53 0x00007ffff7c535a3 in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#54 0x00007ffff7ea0ee5 in g_application_run () at /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#55 0x000055555556bc45 in main (argc=1, argv=0x7fffffffe2d8) at ../../../../../gnome-disk-utility/src/disks/main.c:33
Edited by Maximiliano