alert-dialog: Fix a crash when setting content-width/height before present()

Fixes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/908


(cherry picked from commit c2699a4b50601c146a37230eca659a0ca9108f43)